クライアントアプリのUIを簡単計算アプリに変更し、ボタンと入力エリアを追加。スタイルを改善し、レスポンスを向上させました。

--- a/final_project/my_project/client.html
+++ b/final_project/my_project/client.html
@@ -1,32 +1,68 @@
 <!DOCTYPE html>
 <html lang="ja">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>データ管理アプリX</title>
+    <title>簡単計算アプリ</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
-
 <body>
-    <h1>データ管理</h1>
+    <div class="container">
+        <h1>簡単計算アプリ</h1>
 
-    <h2>データ一覧</h2>
-    <ul id="data-list">
-        <!-- データはここに表示されます -->
-    </ul>
+        <div class="buttons">
+            <div class="plus-group">
+                <button id="addButton" class="plus">+100</button>
+                <button id="add300Button" class="plus">+300</button>
+                <button id="add500Button" class="plus">+500</button>
+            </div>
+            <br>
+            <div class="minus-group">
+                <button id="subtractButton" class="minus">-100</button>
+                <button id="subtract300Button" class="minus">-300</button>
+                <button id="subtract500Button" class="minus">-500</button>
+            </div>
+        </div>
 
-    <h2>データ追加</h2>
-    <form id="add-data-form">
-        <label for="value1">値1:</label>
-        <input type="text" id="value1" name="value1" required><br>
-        <label for="value2">値2:</label>
-        <input type="text" id="value2" name="value2"><br>
-        <button type="submit">追加</button>
-    </form>
+        <div class="mode-select">
+            <button id="modePlus" class="mode active">＋</button>
+            <button id="modeMinus" class="mode">－</button>
+        </div>
 
+        <div class="input-area">
+            <input type="text" id="numberInput" placeholder="例: 50" readonly>
+            <button id="setButton">決定</button>
+        </div>
+
+        <div class="keypad">
+            <div class="key-row">
+                <button class="key">7</button>
+                <button class="key">8</button>
+                <button class="key">9</button>
+            </div>
+            <div class="key-row">
+                <button class="key">4</button>
+                <button class="key">5</button>
+                <button class="key">6</button>
+            </div>
+            <div class="key-row">
+                <button class="key">1</button>
+            <button class="key">2</button>
+            <button class="key">3</button>
+            </div>
+        <div class="key-row">
+            <button class="key">0</button>
+            <span class="key-spacer"></span>
+            <button class="key" id="keyClear">C</button>
+        </div>
+    </div>
+
+        <div class="result-area">
+            <p id="result">結果:0</p>
+            <br>
+            <button id="resetResult" class="reset-btn">リセット</button>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
-
 </html>
