--- a/final_project/my_project/client.html
+++ b/final_project/my_project/client.html
@@ -25,8 +25,11 @@
             </div>
         </div>
         <div class="input-area">
-            <input type="text" id="numberInput" readonly>
-            <button id="setButton">決定</button>
+            <div class="input-row">
+                <input id="numberInput" type="text" readonly>
+                <button id="doubleButton" class="double-btn">×2</button>
+                <button id="setButton">決定</button>
+            </div>
         </div>
         <div class="keypad">
             <div class="key-row">
