最終コミット

--- a/final_project/my_project/client.html
+++ b/final_project/my_project/client.html
@@ -28,7 +28,7 @@
             <div class="input-row">
                 <input id="numberInput" type="text" readonly>
                 <button id="doubleButton" class="double-btn">×2</button>
-                <button id="setButton">決定</button>
+                <button id="setButton" class="set-btn">決定</button>
             </div>
         </div>
         <div class="keypad">
